--- a/src/pages/Login/index.scss
+++ b/src/pages/Login/index.scss
@@ -1,16 +1,24 @@
 @keyframes spin {
   from {
-      transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   to {
-      transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 .login {
+  height: 100%;
+  -webkit-app-region: drag;
+
   .close-button {
+    left: 5px;
+  }
+  .minus-button {
+    left: 25px;
+  }
+  .close-button,.minus-button{
     position: absolute;
     top: 5px;
-    left: 5px;
     svg {
       fill:#BDBDBD;
     }
@@ -21,41 +29,27 @@
       }
     }
   }
-  .minus-button {
-    position: absolute;
-    top: 5px;
-    left: 25px;
-    svg {
-      fill:#BDBDBD;
-    }
+  .close-button.theme-gradient,.minus-button.theme-gradient{
     &:hover{
-      cursor: pointer;
       svg {
-        fill:#FA6261;
+        fill:#FFFFFF;
       }
     }
   }
   &-logo{
     padding: 20px 0;
-    background-color: #FFF;
     display: flex;
     justify-content: center;
     align-items: center;
-    -webkit-app-region: drag;
-    &:hover{
-      cursor: pointer;
-    }
     .avatar-text {
       width: 60px;
       height: 60px;
     }
   }
   &-bottom {
-    background-color: #F4F5F7;
     .logan {
       padding: 20px 0;
       font-size: 12px;
-      color: #8898AA;
       letter-spacing: 0.37px;
       text-align: center;
     }
@@ -87,25 +81,31 @@
         .is-switch {
           margin-left: -14px;
         }
-        .is-switch-checked {
+        .is-switch-checked-light {
           color: rgba(110, 70, 255, 0.54);
+        }
+        .is-switch-base-gradient {
+          color: #dacece;
+        }
+        .is-switch-base-gradient.is-switch-checked-gradient {
+          color:#FFFFFF;
+        }
+        .is-switch-bar-gradient {
+          background-color: rgba(0,0,0,0.8);
         }
         .remember-text {
           font-size: 12px;
           color: #8898AA;
           letter-spacing: 0.37px;
         }
-
       }
     }
     .privacy-agreement {
       font-size: 12px;
-      color: #8898AA;
       letter-spacing: 0.37px;
       text-align: center;
 
       span {
-        color: #3a89e2;
         &:hover {
           cursor: pointer;
           color: #1173e2;
