--- a/src/pages/Privacy/index.scss
+++ b/src/pages/Privacy/index.scss
@@ -1,10 +1,15 @@
 .privacy {
+  height: 100%;
+  overflow-y: auto;
+  -webkit-app-region: drag;
+  background-color: #F4F5F7;
+
   .privacy-header {
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #FFF;
+    
     .avatar-text {
       margin: 20px 0;
     }
@@ -13,6 +18,15 @@
       font-size: 14px;
       margin-left: 10px;
       font-weight: 500;
+    }
+    &.privacy-header-theme-light {
+      background-color: #FFF;
+    }
+    &.privacy-header-theme-gradient{
+      background: linear-gradient(to right, red , blue);
+      > span {
+        color: #ffffff;
+      }
     }
   }
   .privacy-text {
