--- a/src/pages/Main/index.scss
+++ b/src/pages/Main/index.scss
@@ -126,7 +126,10 @@
     background: linear-gradient(to right, red , blue);
   }
   &-center {
-    display: inline-flex;
     flex: 1;
+    padding: 10px;
+    background: url('../../assets/bg.png') no-repeat;
+    background-size: contain;
+    background-position: center;
   }
 }
