修改 card padding 样式

--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -60,7 +60,8 @@
       flex-direction: column;
       justify-items: center;
       align-items: center;
-      padding: 10px 0;
+      padding-top: 15px;
+      padding-bottom: 5px;
       line-height: 19px;
       color: #3a383f;
 
