--- a/src/pages/Main/index.scss
+++ b/src/pages/Main/index.scss
@@ -155,7 +155,7 @@
     padding-bottom: 5px;
     font-size: 12px;
     .icon-action {
-      color: #8898AA;
+      color: #9587F7;
       width: 14px;
       height: 14px;
       margin-right: 5px;
