--- a/src/pages/Main/index.scss
+++ b/src/pages/Main/index.scss
@@ -147,6 +147,7 @@
     background: url('../../assets/bg.png') no-repeat;
     background-size: contain;
     background-position: center;
+    overflow-y: auto;
 
     .empty-tip {
       text-align: center;
